--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: vcdclustertemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -21,14 +21,19 @@ spec:
           API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -101,9 +106,9 @@ spec:
                           refreshToken:
                             type: string
                           secretRef:
-                            description: SecretReference represents a Secret Reference.
-                              It has enough information to retrieve secret in any
-                              namespace
+                            description: |-
+                              SecretReference represents a Secret Reference. It has enough information to retrieve secret
+                              in any namespace
                             properties:
                               name:
                                 description: name is unique within a namespace to
@@ -143,14 +148,19 @@ spec:
           API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -191,55 +201,18 @@ spec:
                             type: string
                         type: object
                       multiZoneSpec:
-                        description: MultiZoneSpec provides details of the configuration
-                          of the zones in the cluster as well as the NetworkTopologyType
+                        description: |-
+                          MultiZoneSpec provides details of the configuration of the zones in the cluster as well as the NetworkTopologyType
                           used.
                         properties:
                           dcGroupConfig:
                             description: DCGroupConfig contains configuration for
                               DCGroup zone topology.
                             type: object
-                          externalLoadBalancerConfig:
-                            description: ExternalLoadBalancerConfig contains configuration
-                              for ExternalLoadBalancer zone topology.
-                            properties:
-                              edgeGatewayZones:
-                                description: EdgeGatewayZones defines a list of zones
-                                  containing an edge gateway.
-                                items:
-                                  description: EdgeGatewayZone provides the details
-                                    of a zone containing an edge gateway. Used with
-                                    ExternalLoadBalancer topology.
-                                  properties:
-                                    loadBalancerIP:
-                                      description: LoadBalancerIP is the IP address
-                                        of the load balancer configured on the edge
-                                        gateway for this zone.
-                                      type: string
-                                    loadBalancerPort:
-                                      description: LoadBalancerPort is the port of
-                                        the load balancer configured on the edge gateway
-                                        for this zone.
-                                      type: integer
-                                    name:
-                                      description: Name is the user-defined name of
-                                        the zone representing the OVDC containing
-                                        an edge gateway.
-                                      type: string
-                                  required:
-                                  - loadBalancerIP
-                                  - loadBalancerPort
-                                  - name
-                                  type: object
-                                type: array
-                            required:
-                            - edgeGatewayZones
-                            type: object
                           zoneTopology:
-                            description: ZoneTopology defines the type of network
-                              topology used across zones in a Multi-AZ deployment.
-                              Valid options are DCGroup, UserSpecifiedEdgeGateway,
-                              and ExternalLoadBalancer,
+                            description: |-
+                              ZoneTopology defines the type of network topology used across zones in a Multi-AZ deployment.
+                              Valid options are DCGroup, UserSpecifiedEdgeGateway, and ExternalLoadBalancer,
                             type: string
                           zones:
                             description: Zones defines the list of zones that this
@@ -274,9 +247,9 @@ spec:
                       org:
                         type: string
                       ovcdZoneConfigMap:
-                        description: OVDCZoneConfigMap defines the name of a config
-                          map storing the mapping Zone -> OVDC in a Multi-AZ deployment.
-                          e.g. zone1 -> ovdc1, zone2 -> ovdc2
+                        description: |-
+                          OVDCZoneConfigMap defines the name of a config map storing the mapping Zone -> OVDC in a Multi-AZ
+                          deployment. e.g. zone1 -> ovdc1, zone2 -> ovdc2
                         type: string
                       ovdc:
                         type: string
@@ -309,9 +282,9 @@ spec:
                           refreshToken:
                             type: string
                           secretRef:
-                            description: SecretReference represents a Secret Reference.
-                              It has enough information to retrieve secret in any
-                              namespace
+                            description: |-
+                              SecretReference represents a Secret Reference. It has enough information to retrieve secret
+                              in any namespace
                             properties:
                               name:
                                 description: name is unique within a namespace to
