--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclustertemplates.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
   name: vcdclustertemplates.infrastructure.cluster.x-k8s.io
 spec:
   group: infrastructure.cluster.x-k8s.io
@@ -21,14 +21,19 @@ spec:
           API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -101,9 +106,9 @@ spec:
                           refreshToken:
                             type: string
                           secretRef:
-                            description: SecretReference represents a Secret Reference.
-                              It has enough information to retrieve secret in any
-                              namespace
+                            description: |-
+                              SecretReference represents a Secret Reference. It has enough information to retrieve secret
+                              in any namespace
                             properties:
                               name:
                                 description: name is unique within a namespace to
@@ -203,53 +208,6 @@ spec:
                           dcGroupConfig:
                             description: DCGroupConfig contains configuration for
                               DCGroup zone topology.
-                            type: object
-                          externalLoadBalancerConfig:
-                            description: ExternalLoadBalancerConfig contains configuration
-                              for ExternalLoadBalancer zone topology.
-                            properties:
-                              edgeGatewayZones:
-                                description: EdgeGatewayZones defines a list of zones
-                                  containing an edge gateway.
-                                items:
-                                  description: |-
-                                    EdgeGatewayZone provides the details of a zone containing an edge gateway. Used with ExternalLoadBalancer topology.
-                                    topology.
-                                  properties:
-                                    loadBalancerIP:
-                                      description: LoadBalancerIP is the IP address
-                                        of the load balancer configured on the edge
-                                        gateway for this zone.
-                                      type: string
-                                    loadBalancerPort:
-                                      description: LoadBalancerPort is the port of
-                                        the load balancer configured on the edge gateway
-                                        for this zone.
-                                      type: integer
-                                    name:
-                                      description: Name is the user-defined name of
-                                        the zone representing the OVDC containing
-                                        an edge gateway.
-                                      type: string
-                                  required:
-                                  - loadBalancerIP
-                                  - loadBalancerPort
-                                  - name
-                                  type: object
-                                type: array
-                            required:
-                            - edgeGatewayZones
-                            type: object
-                          userSpecifiedEdgeGatewayConfig:
-                            description: UserSpecifiedEdgeGatewayConfig contains configuration
-                              for UserSpecifiedEdgeGateway zone topology.
-                            properties:
-                              edgeGatewayZone:
-                                description: EdgeGatewayZone defines the name of the
-                                  user-provided zone containing an edge gateway.
-                                type: string
-                            required:
-                            - edgeGatewayZone
                             type: object
                           zoneTopology:
                             description: |-
