CAFV-444: Allow ovdc name and ID to both be used by clients

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -678,8 +678,8 @@ spec:
                         name:
                           description: Name defines the name of this zone.
                           type: string
-                        ovdcName:
-                          description: OVDCName defines the actual name of the OVDC
+                        ovdc:
+                          description: OVDC defines the name or URN-ID of the OVDC
                             which corresponds to this zone.
                           type: string
                         ovdcNetworkName:
@@ -689,7 +689,7 @@ spec:
                       required:
                       - controlPlaneZone
                       - name
-                      - ovdcName
+                      - ovdc
                       - ovdcNetworkName
                       type: object
                     type: array
@@ -751,8 +751,6 @@ spec:
                 type: object
             required:
             - org
-            - ovdc
-            - ovdcNetwork
             - site
             - userContext
             type: object
@@ -865,8 +863,8 @@ spec:
                         name:
                           description: Name defines the name of this zone.
                           type: string
-                        ovdcName:
-                          description: OVDCName defines the actual name of the OVDC
+                        ovdc:
+                          description: OVDC defines the name or URN-ID of the OVDC
                             which corresponds to this zone.
                           type: string
                         ovdcNetworkName:
@@ -876,7 +874,7 @@ spec:
                       required:
                       - controlPlaneZone
                       - name
-                      - ovdcName
+                      - ovdc
                       - ovdcNetworkName
                       type: object
                     type: array
