--- a/templates/infrastructure-components.yaml
+++ b/templates/infrastructure-components.yaml
@@ -701,8 +701,8 @@ spec:
                         name:
                           description: Name defines the name of this zone.
                           type: string
-                        ovdcName:
-                          description: OVDCName defines the actual name of the OVDC
+                        ovdc:
+                          description: OVDC defines the name or URN-ID of the OVDC
                             which corresponds to this zone.
                           type: string
                         ovdcNetworkName:
@@ -712,7 +712,7 @@ spec:
                       required:
                       - controlPlaneZone
                       - name
-                      - ovdcName
+                      - ovdc
                       - ovdcNetworkName
                       type: object
                     type: array
@@ -774,8 +774,6 @@ spec:
                 type: object
             required:
             - org
-            - ovdc
-            - ovdcNetwork
             - site
             - userContext
             type: object
@@ -888,8 +886,8 @@ spec:
                         name:
                           description: Name defines the name of this zone.
                           type: string
-                        ovdcName:
-                          description: OVDCName defines the actual name of the OVDC
+                        ovdc:
+                          description: OVDC defines the name or URN-ID of the OVDC
                             which corresponds to this zone.
                           type: string
                         ovdcNetworkName:
@@ -899,7 +897,7 @@ spec:
                       required:
                       - controlPlaneZone
                       - name
-                      - ovdcName
+                      - ovdc
                       - ovdcNetworkName
                       type: object
                     type: array
@@ -1225,8 +1223,8 @@ spec:
                                 name:
                                   description: Name defines the name of this zone.
                                   type: string
-                                ovdcName:
-                                  description: OVDCName defines the actual name of
+                                ovdc:
+                                  description: OVDC defines the name or URN-ID of
                                     the OVDC which corresponds to this zone.
                                   type: string
                                 ovdcNetworkName:
@@ -1236,7 +1234,7 @@ spec:
                               required:
                               - controlPlaneZone
                               - name
-                              - ovdcName
+                              - ovdc
                               - ovdcNetworkName
                               type: object
                             type: array
@@ -1298,8 +1296,6 @@ spec:
                         type: object
                     required:
                     - org
-                    - ovdc
-                    - ovdcNetwork
                     - site
                     - userContext
                     type: object
