--- a/templates/cluster-template-v1.24.17-tkgv2.3.1-crs.yaml
+++ b/templates/cluster-template-v1.24.17-tkgv2.3.1-crs.yaml
@@ -7,6 +7,9 @@ metadata:
     cni: antrea
     ccm: external
     csi: external
+    cluster-role.tkg.tanzu.vmware.com/management: ""
+    tanzuKubernetesRelease: "v1.24.17---vmware.1-tkg.1"
+    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
 spec:
   clusterNetwork:
     pods:
